footer fix and z-index problem solved

--- a/src/containers/Webinar/Solution/solution.scss
+++ b/src/containers/Webinar/Solution/solution.scss
@@ -85,6 +85,9 @@
       }
     }
 
+    .stickyBox{
+      // z-index: 11;
+    }
     .timer {
       flex-basis: 40.9%;
       border-radius: 16px;
